# solo-collisions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  autocollision-capsules-code-generation.hpp  autocollision-code-generation.hpp  autocollision-codegen-solo.cpp  autocollision-fcl-check.hpp  autocollision-leg-leg-codegen.cpp  autocollision-leg-leg-codegen.hpp  autocollision-leg-leg-fcl-check.hpp  autocollision-shoulders-code-generation.hpp  autocollision-shoulders-main.cpp  codegen_helper.hpp  collision_approx_fourier.py  collision_approx_svm.py  deprec-autocollision-codegen-solo.cpp  distance_codegen.cpp  end2end_codegen_demo.cpp  end2end_legs_collision_check.hpp  geometric_distances.hpp  inference_neural_net.hpp  inference_neural_net_codegen.cpp  load_pytorch_model.cpp  main_codegen.cpp  polynom_codegen.cpp  rel_placement_codegen.cpp  relative-placement-codegen.cpp  relative-placement-codegen.hpp  relative_placement.cpp  segment-segment-distance-codegen.hpp  segment_segment_distance.cpp  separate_codegen_demo.cpp  simple-coll-geometries.hpp  solo12_collision_charac.py  solo12_collisions_utils.py  solo12_relative_frames_placement.py  tempo_inference_neural_net_codegen.cpp
src/deprecated/: autocollision-shoulders-main.cpp  distance_codegen.cpp  end2end_legs_collision_check.hpp  load_pytorch_model.cpp  polynom_codegen.cpp  relative-placement-codegen.hpp  segment_segment_distance.cpp  separate_codegen_demo.cpp  test_config.yaml  test_gen_code.cpp
src/geomTools/Mathematics/: APInterval.h  BSNumber.h  BSRational.h  ConvexMesh3.h  ETManifoldMesh.h  GaussNewtonMinimizer.h  IEEEBinary.h  IEEEBinary16.h  IntrConvexMesh3Plane3.h  LevenbergMarquardtMinimizer.h  RootsBisection1.h  RootsBisection2.h  SurfaceExtractorMC.h  UIntegerALU32.h  UIntegerAP32.h  UIntegerFP32.h  UniqueVerticesTriangles.h
src/npy_data/: collision_map_centered_res50.npy  collision_map_distance_res100.npy
src/python/: capsule_approximation.py  collision_approx_fourier.py  collision_approx_neural_net.py  collision_approx_neural_net_pytorch.py  collision_gradient_approx.py  handcrafted_nn.py  legs_cpp_wrapper.py  pointRectDist.py  shoulders_cpp_wrapper.py  solo12_collision_charac.py  solo12_collision_gradient.py  solo12_collisions_utils.py  solo12_legs_collisions_main.py  solo12_legs_collisions_utils.py  solo12_lowlegs_base_collision.py  solo12_relative_frames_placement.py  solo12_shoulder_collision_charac.py  solo12_shoulder_collision_utils.py  solo_control.py  solo_gepetto_sim.py  solo_pybullet_sim.py  solo_shoulder_approx_common.py  solo_shoulder_approx_fourier.py  solo_shoulder_approx_svm.py  solo_shoulder_approx_torch_nn.py  solo_shoulder_extended_collision_sampling.py  torch_nn_to_cpp.py
(+95 files in other folders)
